...
    <string name="File_opened_">File opened %s</string>
    <string name="File_not_found">File not found</string>
    <string name="Can_not_read_file">Can not read file</string>
    <string name="Operation_Canceled">Operation Canceled</string>
    <string name="Recovery_draft_found">Unsaved recovery draft</string>
    <string name="Recovery_draft_message">An unsaved version of “%1$s” from %2$s was found.</string>
    <string name="Restore">Restore</string>
    <string name="Discard_draft">Discard draft</string>
    <string name="External_change_detected">External change detected</string>
    <string name="External_change_message">“%1$s” changed outside TextPad. Reload the external version, overwrite it with your edits, save your edits as another file, or cancel to keep editing.</string>
    <string name="Overwrite">Overwrite</string>
    <string name="Reload">Reload</string>
    <string name="Reload_external_title">Reload external version?</string>
    <string name="Reload_external_message">Your unsaved TextPad edits will be discarded after the external version is loaded successfully.</string>
...
    <string name="About_Editor">About Editor</string>
    <string name="Warranty_Information">Warranty Information</string>
    <string name="Font">Font</string>
    <string name="Choose_a_font_type">Choose a font type</string>
    <string name="Open_Last">Open Last</string>
    <string name="To_open_last_edited_file">To open last edited file</string>
    <string name="Main_Settings">Main Settings</string>
    <string name="Appearance">Appearance</string>
    <string name="You_have_made_some_changes">You have made some changes.</string>
    <string name="Are_you_sure_to_quit">Are you sure you want to quit the application?</string>
    <string name="File_already_exists">File already exists</string>
    <string name="Existing_file_will_be_overwritten">Existing file will be overwritten, are you sure to proceed?</string>
    <string name="Exit">Exit</string>
...
